@@ -1,5 +1,7 @@
 class Roda
   module RodaPlugins
+    warn 'The static_path_info plugin is deprecated and will be removed in Roda 3.  It has been a no-op since Roda 2, and can just be removed from the application.'
+
     module StaticPathInfo
     end
 
